*** empty log message ***

--- a/znaki2/mmb.cnf
+++ b/znaki2/mmb.cnf
@@ -1,43 +1,42 @@
 -
   name: триангуляционный знак
-  desc: .
   mp:   POI 0x0F00 0 0
-  fig:  2 1 0 3 0 7 57 -1 20 0.000 1 1 -1 0 0 1  
+  fig:  2 1 0 2 0 7 57 -1 20 0.000 1 1 -1 0 0 1  
   pic:  pics/trig.fig
   txt:  4 0 0 40 -1 18 8 0.0000 4
 -
   name: отметка высоты
-  desc: .
   mp:   POI 0x1100 0 0
   fig:  2 1 0 4  0 7  57 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+-
+  name: маленькая отметка высоты
+  desc: взятая автоматически из srtm и т.п.
+  mp:   POI 0x0D00 0 0
+  fig:  2 1 0 3  0 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 40 -1 18 6 0.0000 4
 -
   name: отметка уреза воды
-  desc: .
   mp:   POI 0x1000 0 0
   fig:  2 1 0 4  1 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 1 40 -1 18 6 0.0000 4
 -
   name: подпись лесного квартала, урочища
-  desc: .
   mp:   POI 0x2800 0 0
   fig:  4 1 12 55 -1 3 8 0.0000 4                 
 -
   name: памятник
-  desc: .
   mp:   POI 0x2c04 0 0
   fig:  2 1 0 1  4 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/pam.fig
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
   name: церковь
-  desc: .
   mp:   POI 0x2C0B 0 0
   fig:  2 1 0 1 11 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/cerkov.fig
 -
   name: остановка автобуса
-  desc: .
   mp:   POI 0x2F08 0 0
   fig:  2 1 0 4  4 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/avt.fig
@@ -48,85 +47,152 @@
   fig:  2 1 0 4  4 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: перевал н/к
-  desc: .
+  name: перевал неизвестной сложности
   mp:   POI 0x6406 0 0
-  fig:  2 1 0 1 23 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  fig:  2 1 0 1 1 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per.fig
 -
-  name: перевал 1А-1Б
-  desc: .
-  mp:   POI 0x6615 0 0
-  fig:  2 1 0 1 22 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  name: перевал н/к
+  mp:   POI 0x6620 0 0
+  fig:  2 1 0 1 2 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/pernk.fig
 -
-  name: перевал 1Б-..
-  desc: .
-  mp:   POI 0x6614 0 0
-  fig:  2 1 0 1 21 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  name: перевал 1А
+  mp:   POI 0x6621 0 0
+  fig:  2 1 0 1 3 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per1a.fig
+-
+  name: перевал 1Б
+  mp:   POI 0x6622 0 0
+  fig:  2 1 0 1 4 7 158 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per1b.fig
+-
+  name: перевал 2А
+  mp:   POI 0x6623 0 0
+  fig:  2 1 0 1 5 7 158 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per2a.fig
+-
+  name: перевал 2Б
+  mp:   POI 0x6624 0 0
+  fig:  2 1 0 1 6 7 158 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per2b.fig
+-
+  name: перевал 3А
+  mp:   POI 0x6625 0 0
+  fig:  2 1 0 1 7 7 158 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per3a.fig
+-
+  name: перевал 3Б
+  mp:   POI 0x6626 0 0
+  fig:  2 1 0 1 8 7 158 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per3b.fig
+-
+  name: каньон
+  mp:   POI 0x660B 0 0
+  fig:  2 1 0 1 9 7 158 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/kan.fig
+-
+  name: ледопад
+  mp:   POI 0x650A 0 0
+  fig:  2 1 0 1 10 7 158 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/ldp.fig
 -
   name: кладбище
-  desc: .
   mp:   POI 0x6403 0 1
   fig:  2 1 0 1 12 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/kladb.fig
 -
   name: башня
-  desc: .
   mp:   POI 0x6411 0 0
   fig:  2 1 0 1  5 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/bash.fig
 -
   name: родник
-  desc: .
   mp:   POI 0x6414 0 0
   fig:  2 1 0 4 22046463 7  57 -1 -1 0.000 0 1 -1 0 0 1 
 -
   name: дом
-  desc: .
   mp:   POI 0x6415 0 1
   fig:  2 1 0 4  0 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
   name: водопад
-  desc: .
   mp:   POI 0x6508 0 0
   fig:  2 1 0 4 17 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 40 -1 3 8 0.0000 4
 -
   name: порог
-  desc: .
   mp:   POI 0x650E 0 0
   fig:  2 1 0 4  8 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 40 -1 3 8 0.0000 4
 -
   name: яма
-  desc: .
   mp:   POI 0x6603 0 0
   fig:  2 1 0 1 25 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/yama.fig
   txt:  4 0 26 40 -1 3 8 0.0000 4
 -
   name: охотничья вышка, кормушка и т.п.
-  desc: .
   mp:   POI 0x6606 0 0
   fig:  2 1 0 1  6 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/ohotn.fig
 -
   name: курган
-  desc: .
   mp:   POI 0x6613 0 0
   fig:  2 1 0 1 26 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pics/pupyr.fig
   txt:  4 0 26 40 -1 3 8 0.0000 4
 -
   name: скала-останец
-  desc: .
   mp:   POI 0x6616 0 0
   fig:  2 1 0 1 20 7 157 -1 -1 0.000 0 1 -1 0 0 1
   pic:  pics/skala.fig
   txt:  4 0 0 40 -1 3 8 0.0000 4
+
+
+-
+  name: лес
+  desc: 
+  mp:   POLYGON 0x16 0 1
+  fig:  2 3 0 0 12 27983786 100 -1 20 0.000 0 1 -1 0 0 0
+-
+  name: поле
+  desc: 
+  mp:   POLYGON 0x52 0 1
+  fig:  2 3 0 0 12 27983786  99 -1 40 0.000 0 1 -1 0 0 0
+-
+  name: остров леса
+  desc: 
+  mp:   POLYGON 0x15 0 1
+  fig:  2 3 0 0 12 27983786  97 -1 20 0.000 0 1 -1 0 0 0
+-
+  name: свежая вырубка
+  desc: 
+  mp:   POLYGON 0x4F 0 1
+  fig:  2 3 0 0 12  7  98 -1 43 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
+-
+  name: стар.вырубка
+  desc: 
+  mp:   POLYGON 0x50 0 1
+  fig:  2 3 0 0 12 27983786  98 -1 43 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
+-
+  name: редколесье
+  desc: 
+  mp:   POLYGON 0x14 0 1
+  fig:  2 3 0 0 27983786  7  98 -1 43 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
 -
   name: закрытые территории
   desc: 
@@ -146,15 +212,17 @@
   fig:  2 3 0 1  0 27  94 -1 15 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 18 8 0.0000 4
 -
-  name: остров леса
+  name: дачи, сад.уч., д/о, п/л
   desc: 
-  mp:   POLYGON 0x15 0 1
-  fig:  2 3 0 0 12 27983786  97 -1 20 0.000 0 1 -1 0 0 0
+  mp:   POLYGON 0x4E 0 1
+  fig:  2 3 0 1  0 27983786  93 -1 10 0.000 0 0 -1 0 0 0
+  txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: лес
+  name: кладбище
   desc: 
-  mp:   POLYGON 0x16 0 1
-  fig:  2 3 0 0 12 27983786 100 -1 20 0.000 0 1 -1 0 0 0
+  mp:   POLYGON 0x1A 0 1
+  fig:  2 3 0 1  0 27983786  92 -1  5 0.000 0 0 -1 0 0 0
+  txt:  4 0 0 40 -1 3 8 0.0000 4
 -
   name: водоемы
   desc: 
@@ -168,50 +236,65 @@
   fig:  2 3 0 1 22046463  3  85 -1 15 0.000 0 0 -1 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: дачи, сад.уч., д/о, п/л
-  desc: 
-  mp:   POLYGON 0x4E 0 1
-  fig:  2 3 0 1  0 27983786  93 -1 10 0.000 0 0 -1 0 0 0
-  txt:  4 0 0 40 -1 3 8 0.0000 4
--
-  name: кладбище
-  desc: 
-  mp:   POLYGON 0x1A 0 1
-  fig:  2 3 0 1  0 27983786  92 -1  5 0.000 0 0 -1 0 0 0
--
-  name: свежая вырубка
-  desc: 
-  mp:   POLYGON 0x4F 0 1
-  fig:  2 3 0 0 12  7  98 -1 43 0.000 0 0 -1 0 0 0
-  txt:  4 1 0 40 -1 3 8 0.0000 4
--
-  name: стар.вырубка
-  desc: 
-  mp:   POLYGON 0x50 0 1
-  fig:  2 3 0 0 12 27983786  98 -1 43 0.000 0 0 -1 0 0 0
-  txt:  4 1 0 40 -1 3 8 0.0000 4
--
-  name: редколесье
-  desc: 
-  mp:   POLYGON 0x51 0 1
-  fig:  2 3 0 0 27983786  7  98 -1 43 0.000 0 0 -1 0 0 0
--
-  name: ледник
-  desc: 
-  mp:   POLYGON 0x4D 0 1
-  fig:  2 3 0 0 22046463  7  98 -1 43 0.000 0 0 -1 0 0 0
-  txt:  4 1 0 40 -1 3 8 0.0000 4
--
-  name: поле
-  desc: 
-  mp:   POLYGON 0x52 0 1
-  fig:  2 3 0 0 12 27983786  99 -1 40 0.000 0 1 -1 0 0 0
--
   name: остров
   desc: 
   mp:   POLYGON 0x53 0 1
   fig:  2 3 0 1 22046463  3  84 -1 40 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
+-
+  name: заболоченность
+  desc: 
+  mp:   POLYGON 0x51 0 1
+  fig:  2 3 0 0 22046463 3 87 -1 49 0.000 0 0 -1 0 0 0
+  txt:  4 1 1 40 -1 3 8 0.0000 4
+-
+  name: болото
+  desc: 
+  mp:   POLYGON 0x4C 0 1
+  fig:  2 3 0 0 3 22046463 87 -1 49 0.000 0 0 -1 0 0 0
+  txt:  4 1 1 40 -1 3 8 0.0000 4
+-
+  name: ледник
+  desc: 
+  mp:   POLYGON 0x4D 0 1
+  fig:  2 3 0 0 22046463  7  98 -1 43 0.000 0 0 -1 0 0 0
+  txt:  4 1 1 40 -1 3 8 0.0000 4
+-
+  name: крутой склон
+  desc: 
+  mp:   POLYGON 0x19 0 1
+  fig:  2 3 0 0 0 24 91 -1 20 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
+-
+  name: дырка в srtm-данных
+  desc: 
+  mp:   POLYGON 0xA 0 1
+  fig:  2 3 0 0 0 4 110 -1 20 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
+
+
+
+-
+  name: отличный путь
+  desc:
+  mp:   POLYLINE 0x35 0 0
+  fig:  2 1 2 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
+-
+  name: хороший путь
+  desc:
+  mp:   POLYLINE 0x34 0 0
+  fig:  2 1 0 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
+-
+  name: хороший путь
+  desc:
+  mp:   POLYLINE 0x33 0 0
+  fig:  2 1 0 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
+-
+  name: отличный путь
+  desc:
+  mp:   POLYLINE 0x32 0 0
+  fig:  2 1 2 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
+
 -
   name: кривая надпись
   desc: 
