--- a/znaki2/hr.cnf
+++ b/znaki2/hr.cnf
@@ -1,15 +1,19 @@
 -
   name: триангуляционный знак
-  desc: пока использую, как более крупную отметка высоты, м.б. надо ввести отдельный знак
   mp:   POI 0x0F00 0 0
-  fig:  2 1 0 4 24 7 57 -1 20 0.000 1 1 -1 0 0 1  
+  fig:  2 1 0 2 24 7 57 -1 20 0.000 1 1 -1 0 0 1  
   pic:  pics/trig.fig
   txt:  4 0 24 40 -1 18 8 0.0000 4
 -
   name: отметка высоты
-  desc: 
   mp:   POI 0x1100 0 0
-  fig:  2 1 0 3  24 7  57 -1 -1 0.000 0 1 -1 0 0 1 
+  fig:  2 1 0 4  24 7  57 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 24 40 -1 18 8 0.0000 4
+-
+  name: маленькая отметка высоты
+  desc: взятая автоматически из srtm и т.п.
+  mp:   POI 0x0D00 0 0
+  fig:  2 1 0 3 24 7  57 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 24 40 -1 18 6 0.0000 4
 -
   name: отметка уреза воды
@@ -43,20 +47,65 @@
   fig:  2 1 0 4  4 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: перевал н/к
+  name: перевал неизвестной сложности
   mp:   POI 0x6406 0 0
-  fig:  2 1 0 1 23 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  fig:  2 1 0 1 1 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per.fig
 -
-  name: перевал 1А-1Б
-  mp:   POI 0x6615 0 0
-  fig:  2 1 0 1 22 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  name: перевал н/к
+  mp:   POI 0x6620 0 0
+  fig:  2 1 0 1 2 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/pernk.fig
 -
-  name: перевал 1Б-..
-  mp:   POI 0x6614 0 0
-  fig:  2 1 0 1 21 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  name: перевал 1А
+  mp:   POI 0x6621 0 0
+  fig:  2 1 0 1 3 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per1a.fig
+-
+  name: перевал 1Б
+  mp:   POI 0x6622 0 0
+  fig:  2 1 0 1 4 7 158 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per1b.fig
+-
+  name: перевал 2А
+  mp:   POI 0x6623 0 0
+  fig:  2 1 0 1 5 7 158 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per2a.fig
+-
+  name: перевал 2Б
+  mp:   POI 0x6624 0 0
+  fig:  2 1 0 1 6 7 158 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per2b.fig
+-
+  name: перевал 3А
+  mp:   POI 0x6625 0 0
+  fig:  2 1 0 1 7 7 158 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per3a.fig
+-
+  name: перевал 3Б
+  mp:   POI 0x6626 0 0
+  fig:  2 1 0 1 8 7 158 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/per3b.fig
+-
+  name: каньон
+  mp:   POI 0x660B 0 0
+  fig:  2 1 0 1 9 7 158 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/kan.fig
+-
+  name: ледопад
+  mp:   POI 0x650A 0 0
+  fig:  2 1 0 1 10 7 158 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+  pic:  pics/ldp.fig
 -
   name: кладбище
   mp:   POI 0x6403 0 1
@@ -109,6 +158,40 @@
   fig:  2 1 0 1 20 7 157 -1 -1 0.000 0 1 -1 0 0 1
   pic:  pics/skala.fig
   txt:  4 0 0 40 -1 3 8 0.0000 4
+
+
+-
+  name: лес
+  desc: 
+  mp:   POLYGON 0x16 0 1
+  fig:  2 3 0 0 12 27983786 100 -1 20 0.000 0 1 -1 0 0 0
+-
+  name: поле
+  desc: 
+  mp:   POLYGON 0x52 0 1
+  fig:  2 3 0 0 12 27983786  99 -1 40 0.000 0 1 -1 0 0 0
+-
+  name: свежая вырубка
+  desc: 
+  mp:   POLYGON 0x4F 0 1
+  fig:  2 3 0 0 12  7  98 -1 43 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
+-
+  name: стар.вырубка
+  desc: 
+  mp:   POLYGON 0x50 0 1
+  fig:  2 3 0 0 12 27983786  98 -1 43 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
+-
+  name: редколесье
+  desc: 
+  mp:   POLYGON 0x14 0 1
+  fig:  2 3 0 0 27983786  7  98 -1 43 0.000 0 0 -1 0 0 0
+-
+  name: остров леса
+  desc: 
+  mp:   POLYGON 0x15 0 1
+  fig:  2 3 0 0 12 27983786  97 -1 20 0.000 0 1 -1 0 0 0
 -
   name: закрытые территории
   desc: 
@@ -128,15 +211,16 @@
   fig:  2 3 0 1  0 27  94 -1 15 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 18 8 0.0000 4
 -
-  name: остров леса
+  name: дачи, сад.уч., д/о, п/л
   desc: 
-  mp:   POLYGON 0x15 0 1
-  fig:  2 3 0 0 12 27983786  97 -1 20 0.000 0 1 -1 0 0 0
+  mp:   POLYGON 0x4E 0 1
+  fig:  2 3 0 1  0 27983786  93 -1 10 0.000 0 0 -1 0 0 0
+  txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: лес
+  name: кладбище
   desc: 
-  mp:   POLYGON 0x16 0 1
-  fig:  2 3 0 0 12 27983786 100 -1 20 0.000 0 1 -1 0 0 0
+  mp:   POLYGON 0x1A 0 1
+  fig:  2 3 0 1  0 27983786  92 -1  5 0.000 0 0 -1 0 0 0
 -
   name: водоемы
   desc: 
@@ -150,33 +234,23 @@
   fig:  2 3 0 1 22046463  11  85 -1 15 0.000 0 0 -1 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: дачи, сад.уч., д/о, п/л
+  name: остров
   desc: 
-  mp:   POLYGON 0x4E 0 1
-  fig:  2 3 0 1  0 27983786  93 -1 10 0.000 0 0 -1 0 0 0
+  mp:   POLYGON 0x53 0 1
+  fig:  2 3 0 1 22046463  3  84 -1 40 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: кладбище
-  desc: 
-  mp:   POLYGON 0x1A 0 1
-  fig:  2 3 0 1  0 27983786  92 -1  5 0.000 0 0 -1 0 0 0
--
-  name: свежая вырубка
-  desc: 
-  mp:   POLYGON 0x4F 0 1
-  fig:  2 3 0 0 12  7  98 -1 43 0.000 0 0 -1 0 0 0
-  txt:  4 1 0 40 -1 3 8 0.0000 4
--
-  name: стар.вырубка
-  desc: 
-  mp:   POLYGON 0x50 0 1
-  fig:  2 3 0 0 12 27983786  98 -1 43 0.000 0 0 -1 0 0 0
-  txt:  4 1 0 40 -1 3 8 0.0000 4
--
-  name: редколесье
-  desc: 
+  name: заболоченность
+  desc:
   mp:   POLYGON 0x51 0 1
-  fig:  2 3 0 0 27983786  7  98 -1 43 0.000 0 0 -1 0 0 0
+  fig:  2 3 0 0 22046463 11 87 -1 49 0.000 0 0 -1 0 0 0
+  txt:  4 0 1 40 -1 3 8 0.0000 4
+-
+  name: болото
+  desc:
+  mp:   POLYGON 0x4C 0 1
+  fig:  2 3 0 0 11 22046463 87 -1 49 0.000 0 0 -1 0 0 0
+  txt:  4 0 1 40 -1 3 8 0.0000 4
 -
   name: ледник
   desc: 
@@ -184,16 +258,39 @@
   fig:  2 3 0 0 11  7  98 -1 43 0.000 0 0 -1 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: поле
-  desc: 
-  mp:   POLYGON 0x52 0 1
-  fig:  2 3 0 0 12 27983786  99 -1 40 0.000 0 1 -1 0 0 0
+  name: крутой склон
+  desc:
+  mp:   POLYGON 0x4D 0 1
+  fig:  2 3 0 0 0 24 91 -1 20 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
 -
-  name: остров
-  desc: 
-  mp:   POLYGON 0x53 0 1
-  fig:  2 3 0 1 22046463  3  84 -1 40 0.000 0 0 -1 0 0 0
-  txt:  4 0 0 40 -1 3 8 0.0000 4
+  name: дырка в srtm-данных
+  desc:
+  mp:   POLYGON 0xA 0 1
+  fig:  2 3 0 0 0 4 110 -1 20 0.000 0 0 -1 0 0 0
+  txt:  4 1 0 40 -1 3 8 0.0000 4
+
+-
+  name: отличный путь
+  desc:
+  mp:   POLYLINE 0x35 0 0
+  fig:  2 1 2 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
+-
+  name: хороший путь
+  desc:
+  mp:   POLYLINE 0x34 0 0
+  fig:  2 1 0 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
+-
+  name: хороший путь
+  desc:
+  mp:   POLYLINE 0x33 0 0
+  fig:  2 1 0 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
+-
+  name: отличный путь
+  desc:
+  mp:   POLYLINE 0x32 0 0
+  fig:  2 1 2 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
+
 -
   name: кривая надпись
   desc: 
