--- a/znaki2/mmb.cnf
+++ b/znaki2/mmb.cnf
@@ -56,55 +56,55 @@
   name: перевал н/к
   mp:   POI 0x6620 0 0
   fig:  2 1 0 1 2 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  pics/pernk.fig
 -
   name: перевал 1А
   mp:   POI 0x6621 0 0
   fig:  2 1 0 1 3 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  pics/per1a.fig
 -
   name: перевал 1Б
   mp:   POI 0x6622 0 0
   fig:  2 1 0 1 4 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  pics/per1b.fig
 -
   name: перевал 2А
   mp:   POI 0x6623 0 0
   fig:  2 1 0 1 5 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  pics/per2a.fig
 -
   name: перевал 2Б
   mp:   POI 0x6624 0 0
   fig:  2 1 0 1 6 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  pics/per2b.fig
 -
   name: перевал 3А
   mp:   POI 0x6625 0 0
   fig:  2 1 0 1 7 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  pics/per3a.fig
 -
   name: перевал 3Б
   mp:   POI 0x6626 0 0
   fig:  2 1 0 1 8 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  pics/per3b.fig
 -
   name: каньон
   mp:   POI 0x660B 0 0
   fig:  2 1 0 1 9 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 24 40 -1 18 8 0.0000 4
   pic:  pics/kan.fig
 -
   name: ледопад
   mp:   POI 0x650A 0 0
   fig:  2 1 0 1 10 7 158 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 0 0 40 -1 18 8 0.0000 4
+  txt:  4 0 1 40 -1 18 8 0.0000 4
   pic:  pics/ldp.fig
 -
   name: кладбище
@@ -120,6 +120,7 @@
   name: родник
   mp:   POI 0x6414 0 0
   fig:  2 1 0 4 22046463 7  57 -1 -1 0.000 0 1 -1 0 0 1 
+  txt:  4 0 1 40 -1 18 8 0.0000 4
 -
   name: дом
   mp:   POI 0x6415 0 1
@@ -285,12 +286,12 @@
   mp:   POLYLINE 0x34 0 0
   fig:  2 1 0 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
 -
-  name: хороший путь
+  name: удовлетворительный путь
   desc:
   mp:   POLYLINE 0x33 0 0
   fig:  2 1 0 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
 -
-  name: отличный путь
+  name: плохой путь
   desc:
   mp:   POLYLINE 0x32 0 0
   fig:  2 1 2 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
