--- a/znaki2/hr.cnf
+++ b/znaki2/hr.cnf
@@ -261,7 +261,7 @@
 -
   name: крутой склон
   desc:
-  mp:   POLYGON 0x4D 0 1
+  mp:   POLYGON 0x19 0 1
   fig:  2 3 0 0 0 24 91 -1 20 0.000 0 0 -1 0 0 0
   txt:  4 1 0 40 -1 3 8 0.0000 4
 -
