*** empty log message ***

--- a/znaki2/Makefile
+++ b/znaki2/Makefile
@@ -14,11 +14,10 @@ key_test: zn.cpp ../geo_io/libgeo_io.a ../jeeps/libjeeps.a ../loaders/libloaders
 
 l: mmb.png hr.png mmb.conv.png hr.conv.png
 
-FIGCNV = ../vector/fig_conv_podm
 FIGCYR = ~/bin/figcyr
 
-%.conv.fig: %.fig
-	$(FIGCNV) $< $@
+%.conv.fig: %.fig ./get_print
+	./get_print `basename $< .fig`.cnf $< $@
 %.eps: %.fig
 	fig2dev  -L eps -m 3.75 -F  $< | $(FIGCYR) > $@
 %.png: %.eps
