*** empty log message ***

--- a/znaki2/Makefile
+++ b/znaki2/Makefile
@@ -11,6 +11,8 @@ get_text:   zn_lists.cpp zn_key.cpp zn.cpp ../geo_io/libgeo_io.a ../jeeps/libjee
 
 key_test: zn.cpp ../geo_io/libgeo_io.a ../jeeps/libjeeps.a ../loaders/libloaders.a -lpng -ljpeg -ltiff ../utils/libutils.a
 
+tmp: zn_key.cpp ../geo_io/fig.cpp ../utils/libutils.a
+
 
 
 l: mmb.png hr.png mmb.conv.png hr.conv.png
