*** empty log message ***

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -20,4 +20,5 @@ le.Program('mapsoft_ref', 'mapsoft_ref.cpp')
 le.Program('mapsoft_toxyz', 'mapsoft_toxyz.cpp')
 le.Program('mapsoft_map2fig', 'mapsoft_map2fig.cpp')
 le.Program('mapsoft_srtm2fig', 'mapsoft_srtm2fig.cpp')
+le.Program('mapsoft_fig2fig', 'mapsoft_fig2fig.cpp')
 
