*** empty log message ***

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -11,6 +11,7 @@ le.Program('mapsoft_add2fig', 'mapsoft_add2fig.cpp')
 le.Program('mapsoft_convert', 'mapsoft_convert.cpp')
 # le.Program('mapsoft_imgview', 'mapsoft_imgview.cpp')
 le.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
+le.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
 le.Program('mapsoft_getks', 'mapsoft_getks.cpp')
 le.Program('mapsoft_getks_ll', 'mapsoft_getks_ll.cpp')
 le.Program('mapsoft_getgoogle', 'mapsoft_getgoogle.cpp')
