--- a/loaders/SConscript
+++ b/loaders/SConscript
@@ -1,13 +1,10 @@
-Import ('env')
-le = env.Copy()
-sources = Split ("""
-		image_jpeg.cpp
-		image_tiff.cpp
-		image_png.cpp
-		image_i.cpp
-		image_r.cpp
-		image_google.cpp
-		image_ks.cpp
-		""")
-
-le.Library('loaders', sources, LIBS=Split('tiff jpeg png'))
+Library('loaders', \
+    Split("""
+	image_jpeg.cpp
+        image_tiff.cpp
+        image_png.cpp
+        image_i.cpp
+        image_r.cpp
+        image_google.cpp
+        image_ks.cpp
+    """))
