Committing in . CVS: CVS: Modified Files: CVS: DONE SConstruct jeeps/SConscript loaders/SConscript CVS: mapview/SConscript mapview/file_list.h mapview/file_list_am.h CVS: mapview/maps_list.h mapview/mapview.h mapview/mapview_data.h CVS: mapview/trks_list.h mapview/wpts_list.h CVS: programs/mapsoft_calc_nom2ll.cpp programs/mapsoft_fig2fig.cpp CVS: utils/mapsoft_options.h CVS: Removed Files: CVS: jeeps/Makefile CVS: ----------------------------------------------------------------------

--- a/loaders/SConscript
+++ b/loaders/SConscript
@@ -1,4 +1,6 @@
-Library('loaders', \
+Import ('env')
+
+l = env.Library('loaders', \
     Split("""
 	image_jpeg.cpp
         image_tiff.cpp
@@ -8,3 +10,5 @@ Library('loaders', \
         image_google.cpp
         image_ks.cpp
     """))
+env.NoClean(l)
+ 
