--- a/mapview/SConscript
+++ b/mapview/SConscript
@@ -1,7 +1,14 @@
 Import ('env')
 le = env.Copy()
+
+le.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
+
 mapsoft_libs = Split ("geo_io loaders utils jeeps")
+other_libs   = Split ("usb tiff jpeg png gd")
+
 le.Prepend(LIBS=mapsoft_libs)
+le.Prepend(LIBS=other_libs)
+
 le.Program('mapview', 'mapview.cpp')
 
 
