are removed automatically CVS: CVS: Committing in . CVS: CVS: Modified Files: CVS: DONE SConstruct geo_io/SConscript geo_io/geo_data.h CVS: geo_io/io_gu.cpp jeeps/SConscript loaders/SConscript CVS: mapview/SConscript mapview/file_list.h mapview/file_list_am.h CVS: mapview/mapview.h programs/SConscript CVS: programs/mapsoft_fig2fig.cpp utils/SConscript utils/m_time.cpp CVS: utils/m_time.h viewer/SConscript CVS: Added Files: CVS: layers/SConscript CVS: ----------------------------------------------------------------------

--- a/geo_io/SConscript
+++ b/geo_io/SConscript
@@ -1,21 +1,19 @@
 Import ('env')
 le = env.Copy()
-sources = Split ("""
-                 io.cpp
-		 io_gu.cpp
-		 io_oe.cpp
-		 io_gps.cpp
-		 io_xml.cpp
-		 io_kml.cpp
-		 geo_enums.cpp
-		 filters.cpp
-		 geo_convs.cpp
-		 o_fig.cpp
-		 o_fig.cpp
-		 o_htm.cpp
-		 fig.cpp
-		 mp.cpp
-		 geofig.cpp
-                 """)
-
-le.Library('geo_io', sources)
+le.Library('geo_io', \
+    Split ("""
+        io.cpp
+	io_gu.cpp
+    	io_oe.cpp
+	io_gps.cpp
+	io_xml.cpp
+	io_kml.cpp
+	geo_enums.cpp
+	filters.cpp
+	geo_convs.cpp
+	o_fig.cpp
+	o_htm.cpp
+	fig.cpp
+	mp.cpp
+	geofig.cpp
+     """))
