--- a/utils/SConscript
+++ b/utils/SConscript
@@ -1,12 +1,9 @@
 Import ('env')
-le = env.Copy()
-sources = Split ("""
-		mapsoft_options.cpp
-		rect.cpp m_time.cpp m_color.cpp
-		log.cpp line.cpp point_int.cpp
-		""")
 
-le.Library('utils', sources)
-
-SConscript('tests/SConscript')
+env.Library('utils', \
+  Split("""
+    mapsoft_options.cpp
+    rect.cpp m_time.cpp m_color.cpp
+    log.cpp line.cpp point_int.cpp
+  """))
 
