--- a/loaders/SConscript
+++ b/loaders/SConscript
@@ -1,6 +1,6 @@
 Import ('env')
 
-l = env.Library('loaders', \
+env.Library('loaders', \
     Split("""
 	image_jpeg.cpp
         image_tiff.cpp
@@ -10,5 +10,4 @@ l = env.Library('loaders', \
         image_google.cpp
         image_ks.cpp
     """))
-env.NoClean(l)
  
