--- a/programs/SConscript
+++ b/programs/SConscript
@@ -1,29 +1,33 @@
 Import ('env')
-le = env.Copy()
-mapsoft_libs = Split ("geo_io loaders utils jeeps viewer")
+env_gtk = env.Copy()
+env_comm = env.Copy()
 
-le.Prepend(LIBS=mapsoft_libs)
+mapsoft_libs = Split ("geo_io loaders utils jeeps")
+other_libs   = Split ("usb tiff jpeg png gd")
 
-#le.Program('mapsoft_googleview', 'mapsoft_googleview.cpp')
-#le.Program('mapsoft_ksview', 'mapsoft_ksview.cpp')
-le.Program('mapsoft_add2fig', 'mapsoft_add2fig.cpp')
+env_gtk.Prepend(LIBS=[mapsoft_libs,other_libs])
+env_gtk.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
 
-le.Program('mapsoft_convert', 'mapsoft_convert.cpp')
+env_comm.Prepend(LIBS=[mapsoft_libs,other_libs])
+
+
+env_comm.Program('mapsoft_add2fig', 'mapsoft_add2fig.cpp')
+env_comm.Program('mapsoft_convert', 'mapsoft_convert.cpp')
 # le.Program('mapsoft_imgview', 'mapsoft_imgview.cpp')
-le.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
-le.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
-le.Program('mapsoft_getks', 'mapsoft_getks.cpp')
-le.Program('mapsoft_getks_ll', 'mapsoft_getks_ll.cpp')
-le.Program('mapsoft_getgoogle', 'mapsoft_getgoogle.cpp')
-le.Program('mapsoft_mapview', 'mapsoft_mapview.cpp')
-le.Program('mapsoft_mkmap', 'mapsoft_mkmap.cpp')
-le.Program('mapsoft_ref', 'mapsoft_ref.cpp')
-le.Program('mapsoft_toxyz', 'mapsoft_toxyz.cpp')
-le.Program('mapsoft_map2fig', 'mapsoft_map2fig.cpp')
-le.Program('mapsoft_srtm2fig', 'mapsoft_srtm2fig.cpp')
-le.Program('mapsoft_fig2fig', 'mapsoft_fig2fig.cpp')
+env_comm.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
+env_comm.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
+env_comm.Program('mapsoft_getks.cpp',     LIBS=['curl'])
+env_comm.Program('mapsoft_getks_ll.cpp',  LIBS=['curl'])
+env_comm.Program('mapsoft_getgoogle.cpp', LIBS=['curl'])
+env_comm.Program('mapsoft_mkmap', 'mapsoft_mkmap.cpp')
+env_comm.Program('mapsoft_ref', 'mapsoft_ref.cpp')
+env_comm.Program('mapsoft_toxyz', 'mapsoft_toxyz.cpp')
+env_comm.Program('mapsoft_map2fig', 'mapsoft_map2fig.cpp')
+env_comm.Program('mapsoft_srtm2fig', 'mapsoft_srtm2fig.cpp')
+env_comm.Program('mapsoft_fig2fig', 'mapsoft_fig2fig.cpp')
+env_comm.Program('mapsoft_calc_nom2ll', 'mapsoft_calc_nom2ll.cpp')
 
-le.Program('mapsoft_calc_nom2ll', 'mapsoft_calc_nom2ll.cpp')
+env_gtk.Program('mapsoft_mapview.cpp')
 
-
-#le.Program('mapsoft_ksview', 'mapsoft_ksview.cpp')
+#env_gtk.Program('mapsoft_googleview', 'mapsoft_googleview.cpp')
+#env_gtk.Program('mapsoft_ksview', 'mapsoft_ksview.cpp')
