--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -1,8 +1,10 @@
 Import ('env')
 le = env.Copy()
-sources = Split ("""
-		generic_dialog.cpp
-		action_manager.cpp
-		""")
+le.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
 
-le.Library("viewer", sources)
+le.Library("viewer", \
+    Split ("""
+	generic_dialog.cpp
+	action_manager.cpp
+    """))
+
