--- a/programs/SConscript
+++ b/programs/SConscript
@@ -16,9 +16,10 @@ env_comm.Program('mapsoft_convert', 'mapsoft_convert.cpp')
 # le.Program('mapsoft_imgview', 'mapsoft_imgview.cpp')
 env_comm.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
 env_comm.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
-env_comm.Program('mapsoft_getks.cpp',     LIBS=['curl'])
-env_comm.Program('mapsoft_getks_ll.cpp',  LIBS=['curl'])
-env_comm.Program('mapsoft_getgoogle.cpp', LIBS=['curl'])
+env_comm.Program('mapsoft_getks.cpp',     LIBS=['curl', mapsoft_libs,other_libs])
+env_comm.Program('mapsoft_getks_ll.cpp',  LIBS=['curl', mapsoft_libs,other_libs])
+env_comm.Program('mapsoft_getks_nom.cpp',  LIBS=['curl', mapsoft_libs,other_libs])
+env_comm.Program('mapsoft_getgoogle.cpp', LIBS=['curl', mapsoft_libs,other_libs])
 env_comm.Program('mapsoft_mkmap', 'mapsoft_mkmap.cpp')
 env_comm.Program('mapsoft_ref', 'mapsoft_ref.cpp')
 env_comm.Program('mapsoft_toxyz', 'mapsoft_toxyz.cpp')
