--- a/znaki2/hr.cnf
+++ b/znaki2/hr.cnf
@@ -1,4 +1,19 @@
 -
+  name: деревня
+  mp:   POI 0x0700 0 0
+  fig:  2 1 0 3 18 7 50 -1 -1 0.000 1 1 7 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+-
+  name: крупная деревня
+  mp:   POI 0x0800 0 0
+  fig:  2 1 0 4 18 7 50 -1 -1 0.000 1 1 7 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+-
+  name: город
+  mp:   POI 0x0900 0 0
+  fig:  2 1 0 5 18 7 50 -1 -1 0.000 1 1 7 0 0 1
+  txt:  4 0 0 40 -1 18 8 0.0000 4
+-
   name: триангуляционный знак
   mp:   POI 0x0F00 0 0
   fig:  2 1 0 2 24 7 57 -1 20 0.000 1 1 -1 0 0 1  
