are removed automatically CVS: CVS: Committing in . CVS: CVS: Modified Files: CVS: DONE geo_io/fig.cpp geo_io/fig.h geo_io/fig_utils.h CVS: geo_io/geo_convs.cpp geo_io/geo_data.h geo_io/io.cpp CVS: geo_io/mp.cpp geo_io/mp.h ms2.1/libbase/options.cpp CVS: ms2.1/libbase/options.h programs/SConscript CVS: programs/fig_crop.cpp programs/mapsoft_add2fig.cpp CVS: programs/mapsoft_fig2fig.cpp programs/mapsoft_map2fig.cpp CVS: programs/mapsoft_srtm2fig.cpp znaki2/Makefile CVS: znaki2/get_print.cpp znaki2/update_ext.cpp znaki2/zn.cpp CVS: Added Files: CVS: utils/spirit_utils.h CVS: ---------------------------------------------------------------------- :

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -1,6 +1,6 @@
 Import ('env')
 env_gtk = env.Copy()
-env_comm = env.Copy()
+env_geo = env.Copy()
 
 mapsoft_libs = Split ("geo_io loaders utils jeeps")
 other_libs   = Split ("usb tiff jpeg png gd")
@@ -8,28 +8,28 @@ other_libs   = Split ("usb tiff jpeg png gd")
 env_gtk.Prepend(LIBS=[mapsoft_libs,other_libs])
 env_gtk.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
 
-env_comm.Prepend(LIBS=[mapsoft_libs,other_libs])
+env_geo.Prepend(LIBS=[mapsoft_libs,other_libs])
 
 
-env_comm.Program('mapsoft_add2fig', 'mapsoft_add2fig.cpp')
-env_comm.Program('mapsoft_convert', 'mapsoft_convert.cpp')
+env_geo.Program('mapsoft_add2fig', 'mapsoft_add2fig.cpp')
+env_geo.Program('mapsoft_convert', 'mapsoft_convert.cpp')
 # le.Program('mapsoft_imgview', 'mapsoft_imgview.cpp')
-env_comm.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
-env_comm.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
-env_comm.Program('mapsoft_getks.cpp',     LIBS=['curl', mapsoft_libs,other_libs])
-env_comm.Program('mapsoft_getks_ll.cpp',  LIBS=['curl', mapsoft_libs,other_libs])
-env_comm.Program('mapsoft_getks_nom.cpp',  LIBS=['curl', mapsoft_libs,other_libs])
-env_comm.Program('mapsoft_getgoogle.cpp', LIBS=['curl', mapsoft_libs,other_libs])
-env_comm.Program('mapsoft_mkmap.cpp')
-env_comm.Program('mapsoft_ref.cpp')
-env_comm.Program('mapsoft_toxyz.cpp')
-env_comm.Program('mapsoft_map2fig.cpp', LIBS=['curl', mapsoft_libs,other_libs])
-env_comm.Program('mapsoft_srtm2fig.cpp')
-env_comm.Program('mapsoft_fig2fig.cpp')
-env_comm.Program('mapsoft_calc_nom2ll.cpp')
+env_geo.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
+env_geo.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
+env_geo.Program('mapsoft_getks.cpp',     LIBS=['curl', mapsoft_libs,other_libs])
+env_geo.Program('mapsoft_getks_ll.cpp',  LIBS=['curl', mapsoft_libs,other_libs])
+env_geo.Program('mapsoft_getks_nom.cpp',  LIBS=['curl', mapsoft_libs,other_libs])
+env_geo.Program('mapsoft_getgoogle.cpp', LIBS=['curl', mapsoft_libs,other_libs])
+env_geo.Program('mapsoft_mkmap.cpp')
+env_geo.Program('mapsoft_ref.cpp')
+env_geo.Program('mapsoft_toxyz.cpp')
+env_geo.Program('mapsoft_map2fig.cpp', LIBS=['curl', mapsoft_libs,other_libs])
+env_geo.Program('mapsoft_srtm2fig.cpp')
+env_geo.Program('mapsoft_fig2fig.cpp')
+env_geo.Program('mapsoft_calc_nom2ll.cpp')
 
 env.Program(['fig_crop.cpp','../geo_io/fig.o'])
-
+env_geo.Program('fig_ref_mod.cpp')
 
 env_gtk.Program('mapsoft_mapview.cpp')
 
