--- a/ms2.1/libbase/unittests/SConscript
+++ b/ms2.1/libbase/unittests/SConscript
@@ -1,6 +1,6 @@
 Import ('env_base')
 
-env1 = env_base.Copy()
+env1 = env_base.Clone()
 env1.Prepend (LIBS=['base'])
 env1.Append  (LIBPATH = ['..'])
 
