--- a/utils/tests/SConscript
+++ b/utils/tests/SConscript
@@ -1,5 +1,5 @@
 Import ('env')
-le = env.Copy()
+le = env.Clone()
 
 le.Program('generic_accessor_unittest', 'generic_accessor_unittest.cpp', LIBS=['utils'])
 # le.Program('options_test', 'options_test.cpp', LIBS=['utils'])
