--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -1,5 +1,5 @@
 Import ('env')
-le = env.Copy()
+le = env.Clone()
 le.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
 
 le.Library("viewer", \
