--- a/utils/SConscript
+++ b/utils/SConscript
@@ -5,5 +5,6 @@ env.Library('utils', \
     mapsoft_options.cpp
     rect.cpp m_time.cpp m_color.cpp
     log.cpp line.cpp point_int.cpp
+    iconv_utils.cpp spirit_utils.cpp
   """))
 
