--- a/programs/SConscript
+++ b/programs/SConscript
@@ -2,7 +2,7 @@ Import ('env')
 env_gtk = env.Clone()
 env_geo = env.Clone()
 
-mapsoft_libs = Split ("geo_io loaders utils jeeps fig")
+mapsoft_libs = Split ("geo_io loaders jeeps fig mp utils")
 other_libs   = Split ("usb tiff jpeg png gd")
 
 env_gtk.Prepend(LIBS=[mapsoft_libs,other_libs])
@@ -23,12 +23,12 @@ env_geo.Program('mapsoft_getgoogle.cpp', LIBS=['curl', mapsoft_libs,other_libs])
 env_geo.Program('mapsoft_mkmap.cpp')
 env_geo.Program('mapsoft_ref.cpp')
 env_geo.Program('mapsoft_toxyz.cpp')
-env_geo.Program('mapsoft_map2fig.cpp', LIBS=['curl', mapsoft_libs,other_libs])
+env_geo.Program('mapsoft_map2fig.cpp', LIBS=['curl', mapsoft_libs, other_libs])
 env_geo.Program('mapsoft_srtm2fig.cpp')
 env_geo.Program('mapsoft_fig2fig.cpp')
 env_geo.Program('mapsoft_calc_nom2ll.cpp')
 
-env.Program('fig_crop.cpp', LIBS='fig')
+env.Program('fig_crop.cpp', LIBS=['fig', 'utils'])
 env_geo.Program('fig_ref_mod.cpp')
 
 env_gtk.Program('mapsoft_mapview.cpp')
