--- a/programs/SConscript
+++ b/programs/SConscript
@@ -28,6 +28,7 @@ env_geo.Program('mapsoft_srtm2fig.cpp')
 env_geo.Program('mapsoft_fig2fig.cpp')
 env_geo.Program('mapsoft_calc_nom2ll.cpp')
 env_geo.Program('mapsoft_measure.cpp')
+env_geo.Program('mapsoft_srtmprofile.cpp')
 
 env.Program('fig_crop.cpp', LIBS=['fig', 'utils'])
 env_geo.Program('fig_ref_mod.cpp')
