--- a/znaki2/Makefile
+++ b/znaki2/Makefile
@@ -1,6 +1,6 @@
 all: make_map_gk update_map get_map get_legend get_print fig2pnm get_figlib make_nom update_ext np2pt
 
-MAPSOFT_LIBS = ../geo_io/libgeo_io.a ../jeeps/libjeeps.a ../loaders/libloaders.a -lpng -ljpeg -ltiff ../yaml/yaml.cpp -lsyck ../libfig/libfig.a ../libmp/libmp.a ../utils/libutils.a ../lib2d/lib2d.a
+MAPSOFT_LIBS = ../libzn/libzn.a ../geo_io/libgeo_io.a ../jeeps/libjeeps.a ../loaders/libloaders.a -lpng -ljpeg -ltiff ../yaml/yaml.cpp -lsyck ../libfig/libfig.a ../libmp/libmp.a ../utils/libutils.a ../lib2d/lib2d.a
 
 CPPFLAGS=-I../ -g
 
@@ -10,20 +10,20 @@ make_nom:    $(MAPSOFT_LIBS)
 fig2pnm:     ../utils/pnm_shifter.cpp
 pnm_cnt:     ../utils/pnm_shifter.cpp
 
-update_map:  zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
-tool1:       zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
-update_ext:  zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
-get_map:     zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
-get_print:   zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
-np2pt:       zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
+update_map:  $(MAPSOFT_LIBS)
+tool1:       $(MAPSOFT_LIBS)
+update_ext:  $(MAPSOFT_LIBS)
+get_map:     $(MAPSOFT_LIBS)
+get_print:   $(MAPSOFT_LIBS)
+np2pt:       $(MAPSOFT_LIBS)
 
-get_legend:  zn_lists.cpp zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
-get_figlib:  zn_lists.cpp zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
-get_text:    zn_lists.cpp zn_key.cpp zn.cpp $(MAPSOFT_LIBS)
+get_legend:  $(MAPSOFT_LIBS)
+get_figlib:  $(MAPSOFT_LIBS)
+get_text:    $(MAPSOFT_LIBS)
 
-key_test:    zn.cpp $(MAPSOFT_LIBS)
+key_test:    $(MAPSOFT_LIBS)
 
-tmp:         zn_key.cpp $(MAPSOFT_LIBS)
+tmp:         $(MAPSOFT_LIBS)
 
 
 l: mmb.png hr.png mmb.conv.png hr.conv.png mmb_lib hr_lib
