--- a/znaki2/hr.cnf
+++ b/znaki2/hr.cnf
@@ -427,6 +427,11 @@
   name: граница областей
   desc: 
   mp:   POLYLINE 0x1D 0 2
+  fig:  2 1 3 1  18 7 80 -1 -1 4.000 0 1 0 0 0 0
+-
+  name: граница областей
+  desc: 
+  mp:   POLYLINE 0x1D 0 2
   fig:  2 1 3 1  0 7 80 -1 -1 4.000 0 1 0 0 0 0
 -
   name: нижний край обрыва
