--- a/znaki2/mmb.cnf
+++ b/znaki2/mmb.cnf
@@ -122,25 +122,37 @@
   txt:  4 0 1 40 -1 3 8 0.0000 4
   pic:  pics/ldp.fig
 -
+  name: дом
+  mp:   POI 0x6402 0 1
+  fig:  2 1 0 4  0 7  57 -1 -1 0.000 0 0 -1 0 0 1
+  txt:  4 0 0 40 -1 3 8 0.0000 4
+-
   name: кладбище
   mp:   POI 0x6403 0 1
-  fig:  2 1 0 1 12 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  fig:  2 1 0 1 12 7 157 -1 -1 0.000 0 1 -1 0 0 1
   pic:  pics/kladb.fig
 -
   name: башня
   mp:   POI 0x6411 0 0
-  fig:  2 1 0 1  5 7 157 -1 -1 0.000 0 1 -1 0 0 1 
+  fig:  2 1 0 1  5 7 157 -1 -1 0.000 0 1 -1 0 0 1
   pic:  pics/bash.fig
 -
   name: родник
   mp:   POI 0x6414 0 0
-  fig:  2 1 0 4 22046463 7  57 -1 -1 0.000 0 1 -1 0 0 1 
+  fig:  2 1 0 4 22046463 7  57 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 1 40 -1 3 8 0.0000 4
 -
-  name: дом
+  name: развалины
   mp:   POI 0x6415 0 1
-  fig:  2 1 0 4  0 7  57 -1 -1 0.000 0 0 -1 0 0 1 
+  fig:  2 1 0 1 0 7  156 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 0 40 -1 3 8 0.0000 4
+  pic:  pics/razv.fig
+-
+  name: шахты
+  mp:   POI 0x640C 0 1
+  fig:  2 1 0 1 0 7  155 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 0 0 40 -1 3 8 0.0000 4
+  pic:  pics/shaht.fig
 -
   name: водопад
   mp:   POI 0x6508 0 0
@@ -322,6 +334,11 @@
   mp:   POLYLINE 0x01 0 2
   fig:  2 1 0 7 20987968 27 80 -1 -1 0.000 1 0 0 0 0 0
 -
+  name: большое шоссе
+  desc:
+  mp:   POLYLINE 0x0B 0 2
+  fig:  2 1 0 5 20987968 27 80 -1 -1 0.000 1 0 0 0 0 0
+-
   name: шоссе
   desc: 
   mp:   POLYLINE 0x02 0 2
@@ -357,16 +374,19 @@
   desc: 
   mp:   POLYLINE 0x08 0 1
   fig:  2 1 0 1  7 7 77 -1 -1 0.000 0 0 0 0 0 0
+  txt:  4 0 0 40 -1 3 8 0.0000 4
 -
   name: мост-2 (автомобильный)
   desc: 
   mp:   POLYLINE 0x09 0 1
   fig:  2 1 0 2  7 7 77 -1 -1 0.000 0 0 0 0 0 0
+  txt:  4 0 0 40 -1 3 8 0.0000 4
 -
   name: мост-5 (на автомагистралях)
-  desc: 
-  mp:   POLYLINE 0x0B 0 1
-  fig:  2 1 0 5  7 7 77 -1 -1 0.000 0 0 0 0 0 0
+  desc:
+  mp:   POLYLINE 0x0E 0 1
+  fig:  2 1 0 7  7 7 77 -1 -1 0.000 0 0 0 0 0 0
+  txt:  4 0 0 40 -1 3 8 0.0000 4
 -
   name: непроезжая грунтовка
   desc: 
@@ -466,6 +486,11 @@
   desc: 
   mp:   POLYLINE 0x25 0 0
   fig:  2 1 0 2 25 7 89 -1 -1 0.000 1 1 0 0 0 0
+-
+  name: УЖД
+  desc:
+  mp:   POLYLINE 0x0D 0 2
+  fig:  2 1 0 3  0 7 80 -1 -1 0.000 1 0 0 0 0 0
 -
   name: железная дорога
   desc: 
