--- a/programs/SConscript
+++ b/programs/SConscript
@@ -29,6 +29,7 @@ env_geo.Program('mapsoft_fig2fig.cpp')
 env_geo.Program('mapsoft_calc_nom2ll.cpp')
 #env_geo.Program('mapsoft_calc_wu2pg.cpp')
 env_geo.Program('mapsoft_measure.cpp')
+env_geo.Program('mapsoft_trackprofile.cpp')
 env_geo.Program('mapsoft_srtmprofile.cpp')
 
 
