--- a/znaki2/hr.cnf
+++ b/znaki2/hr.cnf
@@ -40,6 +40,11 @@
   mp:   POI 0x2800 0 0
   fig:  4 1 12 55 -1 3 8 0.0000 4                 
 -
+  name: подпись лесного квартала, урочища
+  mp:   POI 0x2800 0 0
+  fig:  2 1 0 4 12 7  55 -1 -1 0.000 0 1 -1 0 0 1
+  txt:  4 1 1 40 -1 3 8 0.0000 4
+-
   name: памятник
   mp:   POI 0x2c04 0 0
   fig:  2 1 0 1  4 7 157 -1 -1 0.000 0 1 -1 0 0 1 
