znaki2: add tx2pt.cpp program to converd old text objects to points with labels

--- a/znaki2/Makefile
+++ b/znaki2/Makefile
@@ -1,4 +1,4 @@
-all: make_map_gk update_map get_map get_legend get_print fig2pnm get_figlib make_nom update_ext np2pt
+all: make_map_gk update_map get_map get_legend get_print fig2pnm get_figlib make_nom update_ext np2pt tx2pt
 
 MAPSOFT_LIBS = ../libzn/libzn.a ../geo_io/libgeo_io.a ../jeeps/libjeeps.a ../loaders/libloaders.a -lpng -ljpeg -ltiff -lusb ../yaml/yaml.cpp -lsyck ../libfig/libfig.a ../libmp/libmp.a ../utils/libutils.a ../lib2d/lib2d.a
 
@@ -16,6 +16,7 @@ update_ext:  $(MAPSOFT_LIBS)
 get_map:     $(MAPSOFT_LIBS)
 get_print:   $(MAPSOFT_LIBS)
 np2pt:       $(MAPSOFT_LIBS)
+tx2pt:       $(MAPSOFT_LIBS)
 
 get_legend:  $(MAPSOFT_LIBS)
 get_figlib:  $(MAPSOFT_LIBS)
