--- a/znaki2/Makefile
+++ b/znaki2/Makefile
@@ -1,4 +1,4 @@
-all: make_map_gk update_map get_map get_legend get_print fig2pnm get_figlib make_nom update_ext np2pt tx2pt
+all: make_map_gk get_legend get_print fig2pnm get_figlib make_nom np2pt tx2pt
 
 MAPSOFT_LIBS = ../libzn/libzn.a ../geo_io/libgeo_io.a ../jeeps/libjeeps.a ../loaders/libloaders.a -lpng -ljpeg -ltiff -lusb ../yaml/yaml.cpp -lsyck ../libfig/libfig.a ../libmp/libmp.a ../utils/libutils.a ../lib2d/lib2d.a
 
@@ -10,10 +10,6 @@ make_nom:    $(MAPSOFT_LIBS)
 fig2pnm:     ../utils/pnm_shifter.cpp $(MAPSOFT_LIBS)
 pnm_cnt:     ../utils/pnm_shifter.cpp
 
-update_map:  $(MAPSOFT_LIBS)
-tool1:       $(MAPSOFT_LIBS)
-update_ext:  $(MAPSOFT_LIBS)
-get_map:     $(MAPSOFT_LIBS)
 get_print:   $(MAPSOFT_LIBS)
 np2pt:       $(MAPSOFT_LIBS)
 tx2pt:       $(MAPSOFT_LIBS)
@@ -21,11 +17,6 @@ tx2pt:       $(MAPSOFT_LIBS)
 get_legend:  $(MAPSOFT_LIBS)
 get_figlib:  $(MAPSOFT_LIBS)
 get_text:    $(MAPSOFT_LIBS)
-
-key_test:    $(MAPSOFT_LIBS)
-
-tmp:         $(MAPSOFT_LIBS)
-
 
 l: mmb.png hr.png mmb.conv.png hr.conv.png mmb_lib hr_lib
 
